--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -54,10 +54,11 @@ input {
   border-radius: 0.125rem;
   padding: 10px 20px;
   color: white;
-  display: inline-flex;
+  display: flex;
+  justify-content: center;
   text-transform: uppercase;
   letter-spacing: 1px;
-  font-weight: 400;
+  font-weight: 600;
   font-size: .9em;
   &:hover {
     cursor: pointer;
